# opencv_alignment

./: .gitignore  CMakeLists.txt  config.yml  opencv_registration.sln
opencv_registration/: affine_align.cpp  config.yml  detect.cpp  main.cpp  my_detector.cpp  my_detector.h  opencv_registration.vcxproj  opencv_registration.vcxproj.filters  try_nlopt.cpp  util.cpp  util.h
src/: CMakeLists.txt  brisk.cpp  detect.cpp  main.cpp  my_detector.cpp  my_detector.h  sift.cpp  test_boost.cpp  util.cpp  util.h
